@@ -1,6 +1,7 @@
 2011-05-14  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/edge/flip.jl: only call after-flip for
-	flip-workspace
+	flip-workspace. set scroll-viewport-steps to 1 for flip-viewport
+	while-moving (no hang when viewport-boundary-mode 'dynamic)
 
 	* lisp/sawfish/wm/edge/actions.jl: add while-moving key-value
 
